--- a/JPATask/pom.xml
+++ b/JPATask/pom.xml
@@ -7,6 +7,18 @@
     <groupId>com.instinctools.egor.mentoring.JPA</groupId>
     <artifactId>JPATask</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <hibernate-version>5.1.12</hibernate-version>
     </properties>
