--- a/NoSQLTask/pom.xml
+++ b/NoSQLTask/pom.xml
@@ -29,6 +29,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate</artifactId>
+            <version>3.5.3-Final</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
