--- a/WebService/pom.xml
+++ b/WebService/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.instinctools.egor.mentoring.web</groupId>
     <artifactId>Web</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <build>
         <plugins>
             <plugin>
@@ -19,6 +20,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>webService</finalName>
     </build>
     <dependencies>
         <dependency>
@@ -70,6 +72,11 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
             <version>1.19.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.3.0</version>
         </dependency>
     </dependencies>
 
