--- a/WebService/src/main/webapp/WEB-INF/web.xml
+++ b/WebService/src/main/webapp/WEB-INF/web.xml
@@ -9,14 +9,14 @@ Inc.//DTD Web Application 2.3//EN"
     </listener>
     <servlet>
         <servlet-name>jersey-json-serlvet</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>com.instinctools.egor.mentoring.web.web.rest</param-value>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>com.instinctools.egor.mentoring.web.JerseyRESTConfig</param-value>
         </init-param>
         <init-param>
-            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-            <param-value>true</param-value>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>com.instinctools.egor.mentoring.web.web.rest</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
