--- a/WebService/pom.xml
+++ b/WebService/pom.xml
@@ -44,14 +44,9 @@
             <version>5.1.34</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.10.0</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.8.0-beta0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
