--- a/SpringCore/pom.xml
+++ b/SpringCore/pom.xml
@@ -68,5 +68,16 @@
             <artifactId>spring-orm</artifactId>
             <version>4.3.12.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.12.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 </project>
